--- a/Desktop/ProyectosAndroid/Prueba1/app/src/main/AndroidManifest.xml
+++ b/Desktop/ProyectosAndroid/Prueba1/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -39,7 +41,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".ProjectsView"></activity>
+        <activity android:name=".ProjectsView" />
+        <activity android:name=".ProjectDetail" />
+        <activity android:name=".ProjectRegister"></activity>
+        <activity android:name=".ImageUploadActivity"></activity>
     </application>
 
 </manifest>
